# system-settings

./: CMakeLists.txt
plugins/security-privacy/: securityprivacy.cpp
plugins/system-update/: CMakeLists.txt  plugin.h
src/: main.cpp  plugin.h
tests/: CMakeLists.txt  plugin.cpp  plugin.h  testutil.cpp  testutil.h
tests/mocks/Ubuntu/SystemSettings/Update/: CMakeLists.txt
tests/plugins/system-update/: CMakeLists.txt
